# ibus

./: Makefile.am  configure.ac
client/: Makefile.am
client/macos/: Makefile.am  README  main.mm
ui/: Makefile.am
ui/macospanel/: Makefile.am  macospanel.xml  macospanel.xml.in  main.mm
